etiquetas en el head y creacion de la carpeta assets

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-ARG">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta>
-    <meta>
-    <meta>
+    <meta name="keywords" content="feria, plantas, jujuy, ciudad cultural">
+    <meta name="author" content="Ontiveros-Torres">
+    <meta name="description" content="home page de la feria de las plantas jujuy 2022">
     <link rel="stylesheet" href="style.css">
     <title>Feria de las Plantas</title>
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav>
+
+        </nav>
 
     </header>
 
