desarrolle el html, css y js

--- a/index.html
+++ b/index.html
@@ -1,29 +1,81 @@
 <!DOCTYPE html>
 <html lang="es-ARG">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="feria, plantas, jujuy, ciudad cultural">
-    <meta name="author" content="Ontiveros-Torres">
-    <meta name="description" content="home page de la feria de las plantas jujuy 2022">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="feria, plantas, jujuy, ciudad cultural" />
+    <meta name="author" content="Ontiveros-Torres" />
+    <meta
+      name="description"
+      content="home page de la feria de las plantas jujuy 2022"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Feria de las Plantas</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-
-        </nav>
-
+      <nav class="navbar">
+          <a href="index.html" class="logo">Feria de Plantas</a>
+          <ul class="barra">
+            <li class="barraItem">
+              <a href="">nosotros</a>
+            </li>
+            <li class="barraItem">
+              <a href="">El evento</a>
+            </li>
+            <li class="barraItem">
+              <a href="">registrate</a>
+            </li>
+          </ul>
+      </nav>
     </header>
-
     <main>
-
+      <div class="container">
+        <h2 class="eventoTitulo"> Se realizara la primera edision de la feria de plantas</h3>
+        <div id="elEvento">
+          <div class="eventoImg">
+            <img src="/assets/eventoimag.jpg" alt="imagenEjemplo" />
+          </div>
+          <div class="eventoTexto">
+                <h4 class="eventoSubtitulo">Se esperan 700 productores en ciudad cultural</h3>
+              <br>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              adipisci qui quae minus laborum alias numquam et eveniet, excepturi
+              officiis repellat fugit id veniam a. Cumque commodi quis quidem
+              placeat! Vero dicta dignissimos cum minus neque natus quis impedit
+              possimus, eaque ullam pariatur velit sed error facere perspiciatis
+              numquam distinctio doloribus quidem! Exercitationem eaque, illum
+              voluptate saepe quaerat fuga excepturi. Similique quasi alias
+              facere! Id, illum voluptas? Quibusdam cupiditate numquam nulla?
+              Pariatur itaque fugit, minus quidem neque vel laborum aspernatur, at
+              amet provident voluptatem numquam. Saepe laudantium iste nulla
+              cupiditate? Esse aperiam neque doloremque nesciunt id facere minima
+              laborum veniam sit voluptatum error pariatur placeat, totam sed
+              sunt, nobis, voluptatibus labore? Odio deserunt voluptatibus
+              adipisci inventore qui vel voluptate quaerat.
+            </p>
+          </div>
+        </div>
+      </div>
+      <h2>El tiempo</h2>
+      <div id="contenedorTiempo">
+        <div id="caja1">
+          <h1 id="temperatura-valor"> </h1>
+          <h1 id="temperatura-descripcion"></h1>
+        </div>
+        <div id="caja2">
+          <h2 id="ubicacion"></h2>
+          <img id="icono-animado" src="" alt="" height="128" width="128">
+        </div>
+        <div id="caja3">
+          <h3>Velocidad del viento</h3>
+          <h1 id="viento-velocidad"></h1>
+        </div>
+      </div>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
     <script src="/main.js"></script>
-</body>
+  </body>
 </html>
