cracion footer c/link whatsaap

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
       <div class="container">
-        <h2 class="eventoTitulo"> Se realizara la primera edision de la feria de plantas</h3>
+        <h2 class="eventoTitulo"> Se realizará la primera edición de la feria de plantas</h3>
         <div id="elEvento">
           <div class="eventoImg">
             <img src="/assets/eventoimag.jpg" alt="imagenEjemplo" />
@@ -75,7 +75,13 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="wp">
+        <a href="https://web.whatsapp.com/" target="_blank" class="whatsapp">
+          <img src="/assets/WhatsApp_icon.png" alt="icono whatsapp" width="50px">       
+        </a>
+      </div>
+    </footer>
     <script src="/main.js"></script>
   </body>
 </html>
