--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <header>
       <nav class="navbar">
-          <a href="index.html" class="logo">Feria de Plantas</a>
+          <a href="index.html" class="logo">
+            <img src="/assets/logo-planta.png" alt="" width="60px">
+          </a>
           <ul class="barra">
             <li class="barraItem">
               <a href="">nosotros</a>
